[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Inventory/InventoryDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Inventory/ToolbarDisplay.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.684425
height = 0.801089

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Rotation_Helper" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Rotation_Helper"]
current = true
far = 8192.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="InventoryCenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -401.5
margin_top = -203.0
margin_right = 401.5
margin_bottom = 203.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryDisplay" parent="InventoryCenterContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 401.0
margin_top = 203.0
margin_right = 401.0
margin_bottom = 203.0

[node name="ToolbarCenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -510.0
margin_top = -213.0
margin_right = 293.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryDisplay" parent="ToolbarCenterContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 401.0
margin_top = 107.0
margin_right = 401.0
margin_bottom = 107.0
script = ExtResource( 3 )
